@@ -4,6 +4,7 @@ Date: ????
   Features:
     - Added argument to `misc.ticks_to_timestring` to preserve leading zeroes
     - Added `divisor` argument to `math.round()`, allowing rounding to the nearest multiple of N
+    - Added `flib_titlebar_flow` style
   Bugfixes:
     - Fixed math.maxuint being one number too large
 ---------------------------------------------------------------------------------------------------
